--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,12 @@ android {
 }
 
 dependencies {
-    implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
+//    implementation "androidx.compose.foundation:foundation:$compose_version"
+//    implementation "androidx.compose.animation:animation:$compose_version"
+//    implementation "androidx.compose.ui:ui:$compose_version"
+//    implementation "androidx.compose.runtime:runtime:$compose_version"
+
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     implementation 'androidx.activity:activity-compose:1.3.0-alpha07'
