--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     // @Preview
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
 
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha07'
+    implementation 'androidx.activity:activity-compose:1.3.0-beta02'
     // 网络图片加载
     implementation 'com.google.accompanist:accompanist-coil:0.9.0'
 }
