--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,7 @@ dependencies {
 
     implementation 'androidx.activity:activity-compose:1.3.0-beta02'
     // 网络图片加载
-    implementation 'com.google.accompanist:accompanist-coil:0.9.0'
+    implementation 'com.google.accompanist:accompanist-coil:0.11.0'
+
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 }
