--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 //    implementation "androidx.compose.animation:animation:$compose_version"
 //    implementation "androidx.compose.ui:ui:$compose_version"
 //    implementation "androidx.compose.runtime:runtime:$compose_version"
-
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha08"
     // @Preview
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
 
