--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <activity android:name=".DrawActivity" />
         <activity android:name=".LayoutActivity" />
         <activity android:name=".TouchActivity" />
-        <activity android:name=".AndroidViewAddComposeActivity" />
-        <activity android:name=".ComposeAddAndroidViewActivity" />
+        <activity android:name=".ComposeViewActivity" />
+        <activity android:name=".AndroidViewActivity" />
     </application>
 </manifest>
