--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,17 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.demo.compose">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:icon="@android:mipmap/sym_def_app_icon"
         android:label="ComposeDemo"
         android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CaseActivity" />
-        <activity android:name=".MutableStateActivity" />
-        <activity android:name=".ModifierActivity" />
-        <activity android:name=".AnimationActivity" />
-        <activity android:name=".DrawActivity" />
-        <activity android:name=".LayoutActivity" />
-        <activity android:name=".TouchActivity" />
-        <activity android:name=".ComposeViewActivity" />
-        <activity android:name=".AndroidViewActivity" />
     </application>
 </manifest>
