--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.5.2"
+coilSvg = "2.4.0"
 kotlin = "2.0.0"
 compose = "1.6.8"
 
@@ -9,6 +10,7 @@ activityCompose = "1.9.1"
 coilCompose = "2.7.0"
 
 coreKtx = "1.13.1"
+landscapistCoil = "1.3.2"
 lifecycle = "2.8.4"
 
 [libraries]
@@ -26,6 +28,9 @@ androidx-compose-material3 = { group = "androidx.compose.material3", name = "mat
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+
+coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coilSvg" }
+landscapist-coil = { module = "com.github.skydoves:landscapist-coil", version.ref = "landscapistCoil" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
