--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,7 @@
     <application
         android:icon="@android:mipmap/sym_def_app_icon"
         android:label="ComposeDemo"
-        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
-<!--        <activity-->
-<!--            android:name=".wechat.HomeActivity"-->
-<!--            android:exported="false" />-->
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
             android:name=".wechat.HomeActivity"
             android:exported="true">
