--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,14 +5,12 @@ coroutine = "1.9.0"
 composeBom = "2024.10.01"
 
 activity = "1.9.3"
-lifecycle = "2.8.6"
+lifecycle = "2.8.7"
 core = "1.13.1"
 appcompat = "1.7.0"
 
 retrofit = "2.11.0"
-coilSvg = "2.4.0"
-coilCompose = "2.7.0"
-coilLandscapist = "1.3.2"
+coil = "3.0.2"
 
 [libraries]
 coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutine" }
@@ -38,9 +36,9 @@ retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = 
 retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 retrofit-mock = { group = "com.squareup.retrofit2", name = "retrofit-mock", version.ref = "retrofit" }
 
-coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
-coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coilSvg" }
-coil-landscapist = { module = "com.github.skydoves:landscapist-coil", version.ref = "coilLandscapist" }
+coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
+coil-okhttp = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coil" }
+coil-svg = { group = "io.coil-kt.coil3", name = "coil-svg", version.ref = "coil" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
