--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ constraintlayoutCompose = "1.1.0"
 recyclerview = "1.4.0"
 browser = "1.8.0"
 
+okhttp = "4.12.0"
 retrofit = "2.11.0"
 coil = "3.0.4"
 leakcanary = "2.14"
@@ -55,6 +56,7 @@ androidx-browser = { group = "androidx.browser", name = "browser", version.ref =
 
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 retrofit-mock = { group = "com.squareup.retrofit2", name = "retrofit-mock", version.ref = "retrofit" }
 
 coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
