--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- Devices running Android 12L (API level 32) or lower  -->
@@ -16,10 +18,19 @@
     <!-- To handle the reselection within the app on Android 14 (API level 34) -->
     <uses-permission android:name="android.permission.READ_MEDIA_VISUAL_USER_SELECTED" />
 
+    <!-- 去除OAID SDK使用的权限-->
+    <uses-permission
+        android:name="android.permission.READ_PHONE_STATE"
+        tools:node="remove" />
+    <!-- 去除OAID SDK使用的权限-->
+    <uses-permission
+        android:name="android.permission.WRITE_SETTINGS"
+        tools:node="remove" />
 
     <application
         android:name=".MyApplication"
         android:icon="@android:mipmap/sym_def_app_icon"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:label="ComposeDemo"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
