--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,8 @@
     <application
         android:name=".MyApplication"
         android:icon="@android:mipmap/sym_def_app_icon"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:label="ComposeDemo"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
             android:name=".MainActivity"
@@ -59,5 +59,8 @@
                     android:scheme="https" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".task.StandardActivity"
+            android:exported="true" />
     </application>
 </manifest>
