--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,8 @@
 [versions]
+android-compileSdk = "35"
+android-minSdk = "24"
+android-targetSdk = "36"
+
 agp = "8.8.1"
 kotlin = "2.1.0"
 coroutine = "1.10.1"
