--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 BASE_URL=https://api.github.com/
+GITHUB_CLIENT_ID=Ov23lidGJmorUQm0t9el
