--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ android-compileSdk = "35"
 android-minSdk = "24"
 android-targetSdk = "36"
 
-agp = "8.9.0"
+agp = "8.9.1"
 kotlin = "2.1.0"
 ksp = "2.1.0-1.0.29"
 coroutine = "1.10.1"
@@ -20,6 +20,8 @@ constraintlayout = "2.2.1"
 recyclerview = "1.4.0"
 browser = "1.8.0"
 splashscreen = "1.0.1"
+navigation = "2.8.9"
+navigationAnimation = "0.36.0"
 
 okhttp = "4.12.0"
 retrofit = "2.11.0"
@@ -60,6 +62,8 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
 androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "browser" }
 androidx-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "splashscreen" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
+accompanist-navigation-animation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "navigationAnimation" }
 
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
