--- a/other_app/src/main/AndroidManifest.xml
+++ b/other_app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <queries>
+        <package android:name="com.gxd.demo.android" />
+    </queries>
     <application
         android:name=".launchmode.OtherApplication"
         android:icon="@android:mipmap/sym_def_app_icon"
