--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,13 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 BASE_URL=https://api.github.com/
 GITHUB_CLIENT_ID=Ov23lidGJmorUQm0t9el
+android.defaults.buildfeatures.resvalues=true
+android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
+android.enableAppCompileTimeRClass=false
+android.usesSdkInManifest.disallowed=false
+android.uniquePackageNames=false
+android.dependency.useConstraints=true
+android.r8.strictFullModeForKeepRules=false
+android.r8.optimizedResourceShrinking=false
+android.builtInKotlin=false
+android.newDsl=false
